--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script type="text/javascript" src="info.json"></script>
+ 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="window.css">
     <link rel="stylesheet" href="appbar.css">
@@ -99,20 +101,3 @@
 </body>
 
 </html>
-
-    <!-- <div id="appbar" class="position-fixed p-2 bottom-0 start-50 translate-middle-x rounded-top justify-content-center">
-        <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#appbarLinks" aria-controls="appbarLinks" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="material-icons">
-                apps
-                </span>
-        </button>
-        <div class="collapse d-md-flex justify-content-around" id="appbarLinks">
-            <a href="#" data-bs-target="#experience" title="Experience"><span class="material-icons icon-color">work</span></a>
-            <a href="#" data-bs-target="#volunteers" title="Volunteers"><span class="material-icons icon-color">group</span></a>
-            <a href="#" data-bs-target="#certification" title="Certification"><span class="material-icons icon-color">verified</span></a>
-            <a href="#" data-bs-target="#aboutMe" title="About Me"><span class="material-icons icon-color">account_box</span></a>
-            <a href="#" data-bs-target="#education" title="Education"><span class="material-icons icon-color">school</span></a>
-            <a href="#" data-bs-target="#projects" title="Projects"><span class="material-icons icon-color">account_tree</span></a>
-       
-        </div>
-    </div> -->
